# rust_backend_web

./: .env  Cargo.toml
migrations/2024-03-25-210458_create_posts/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
