[package]
name = "platzi-rust-blog-post"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
diesel = { version = "2.1.0", features = ["mysql","r2d2"] }
dotenvy = "0.15"
env_logger = "0.11.3"
json = "0.12.4"
mysql = "25.0.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
